[gd_scene load_steps=4 format=2]

[ext_resource path="res://Eklentiler/Tileset/Tiles/Spike.png" type="Texture" id=1]
[ext_resource path="res://Kodlar/Spike.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 65 )

[node name="Spike" type="Area2D"]
collision_layer = 8
collision_mask = 5122
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 253.992, 179.401 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 128, 128 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 384, 128 )
texture = ExtResource( 1 )

[node name="Spike_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Spike_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spike_body_exited"]
[connection signal="timeout" from="Spike_Timer" to="." method="_on_Spike_Timer_timeout"]
